<resources>
    <string name="app_name">Garabatos</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="appname">Garabatos</string>
    <string name="appdescription">Desata tu imaginación</string>
    <string name="draw_linea">Lápiz</string>
    <string name="draw_circulo">Círculo</string>
    <string name="draw_cuadrado">Cuadrado</string>
    <string name="borrar">Borrar</string>
    <string name="grosor">Grosor</string>
    <string name="color">Color</string>
    <string name="rojo">Rojo</string>
    <string name="verde">Verde</string>
    <string name="azul">Azul</string>
    <string name="selector_default">0</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="nuevo">Nuevo lienzo</string>
    <string name="archivo">Archivo</string>
    <string name="recursos">Recursos</string>
</resources>
