<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/recursos">
        <menu>
            <item
                android:id="@+id/nav_lineas"
                android:title="@string/draw_linea"
                android:icon="@android:drawable/ic_menu_edit" />
            <item
                android:id="@+id/nav_circulo"
                android:title="@string/draw_circulo"
                android:icon="@drawable/circle" />
            <item
                android:id="@+id/nav_cuadrado"
                android:title="@string/draw_cuadrado"
                android:icon="@mipmap/square" />
        </menu>
    </item>

    <item android:title="Archivo">
        <menu>
            <item
                android:id="@+id/nav_nuevoLienzo"
                android:title="@string/nuevo"
                android:icon="@android:drawable/ic_menu_delete" />
        </menu>
    </item>

</menu>
