<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:text="@string/grosor"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView2"
        android:layout_height="25dp"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginTop="10dp" />

    <SeekBar
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:id="@+id/sbGrosor"
        android:layout_height="50dp"
        android:layout_width="250dp"
        android:layout_toStartOf="@+id/tvGrosor"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:max="4" />

    <TextView
        android:text="@string/color"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_below="@+id/sbGrosor"
        android:layout_alignParentStart="true"
        android:id="@+id/textView3"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp" />

    <TextView
        android:text="@string/rojo"
        android:layout_height="25dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:id="@+id/textView4"
        android:layout_width="50dp"
        android:layout_marginStart="10dp"
        android:textSize="18sp"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:id="@+id/tvGrosor"
        android:textAlignment="center"
        android:text="@string/selector_default"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:paddingTop="13dp"
        android:textSize="18sp" />


    <TextView
        android:text="@string/selector_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvRojo"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_alignEnd="@+id/tvGrosor"
        android:layout_toEndOf="@+id/sbGrosor"
        android:layout_alignBottom="@+id/sbRojo"
        android:layout_alignTop="@+id/sbRojo" />

    <SeekBar
        android:layout_height="wrap_content"
        android:id="@+id/sbRojo"
        android:max="255"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"
        android:layout_width="230dp" />

    <TextView
        android:text="@string/verde"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:id="@+id/textView5"
        android:layout_toStartOf="@+id/sbRojo"
        android:layout_marginTop="10dp"
        android:textSize="18sp" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView5"
        android:id="@+id/sbVerde"
        android:layout_alignEnd="@+id/sbRojo"
        android:layout_toEndOf="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:max="255" />

    <TextView
        android:text="@string/selector_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sbVerde"
        android:layout_alignEnd="@+id/tvRojo"
        android:id="@+id/tvVerde"
        android:layout_alignTop="@+id/sbVerde"
        android:layout_alignStart="@+id/tvRojo"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:text="@string/azul"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:id="@+id/textView8"
        android:layout_toStartOf="@+id/sbVerde"
        android:layout_marginTop="10dp"
        android:textSize="18sp" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView8"
        android:id="@+id/sbAzul"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignEnd="@+id/sbVerde"
        android:layout_toEndOf="@+id/textView8"
        android:max="255" />

    <TextView
        android:text="@string/selector_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sbAzul"
        android:layout_alignEnd="@+id/tvVerde"
        android:id="@+id/tvAzul"
        android:layout_alignTop="@+id/sbAzul"
        android:layout_alignStart="@+id/tvVerde"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:text="@string/aceptar"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/bCancelar"
        android:layout_alignEnd="@+id/tvAzul"
        android:id="@+id/bAceptar"
        android:layout_width="165dp" />

    <Button
        android:text="@string/cancelar"
        android:layout_height="wrap_content"
        android:id="@+id/bCancelar"
        android:layout_width="165dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView8"
        android:layout_marginBottom="10dp"
        android:onClick="prueba(MainActivity)" />

    <TextView
        android:id="@+id/tvMuestra"
        android:layout_below="@+id/textView8"
        android:layout_marginTop="30dp"
        android:layout_height="15dp"
        android:layout_width="match_parent"
        android:layout_alignStart="@+id/textView8"
        android:layout_alignEnd="@+id/tvAzul" />

</RelativeLayout>